--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: #1f2937;
     height: 60px;
 }
 
@@ -40,4 +39,25 @@
     text-decoration: none;
     font-size: 18px;
     color: #e5e7eb;
+}
+
+/* Hero Section */
+
+.hero {
+    display: flex;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.header, .hero {
+    background-color: #1f2937;
 }
